declare_args() {
  has_http2 = false
}

config("myconfig") {
    include_dirs = [
        "./http",
        "./common",
        "./common/fiber",
        "./third_party/include",
    ]
   
    cflags_cc = ["-std=c++17"]
    lib_dirs = ["./lib"]
    libs = []
    if(has_http2)
    {
        defines = [ "USE_CLIENT_HTTP2=1" ]
        libs += ["nghttp2_asio", "nghttp2"]
    }
    print("is_debug = ", is_debug)
    print("has_http2 = ", has_http2)
}

executable("http_test_client") {
    configs -= [ "//build/config:c++11" ]
    configs += [ ":myconfig" ]
    sources = [
        "./common/logger.cpp",
        "./http/multi_client_http.cpp",
        "./examples/http/client_main.cpp",
    ]

    libs = ["boost_log","boost_fiber", "boost_filesystem", "boost_context", "boost_log_setup", "boost_thread", "boost_date_time"]
    libs += ["ssl", "pthread", "crypto"]
}

executable("http_test_server") {
    configs -= [ "//build/config:c++11" ]
    configs += [ ":myconfig" ]
    sources = [
        "./common/logger.cpp",
        "./http/http_api_server.cpp",
        "./examples/http/server_main.cpp",
        "./examples/http/test_api.hpp",
    ]

    libs = ["boost_log","boost_fiber", "boost_filesystem", "boost_context", "boost_log_setup", "boost_thread", "boost_date_time", "boost_regex"]
    libs += ["ssl", "pthread", "crypto"]
}
